<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_gravity="center"
    tools:context=".ui.MainFragment">

    <Button
        android:id="@+id/btnCreateOperators"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_operators"/>

    <Button
        android:id="@+id/btnFilterOperators"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/filter_operators"/>

    <Button
        android:id="@+id/btnTransformOperators"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/transformation_operators"/>

</LinearLayout>